Redirect to new onboarding page after signing up

--- a/libs/common/src/lib/user/sso/sso-button.component.html
+++ b/libs/common/src/lib/user/sso/sso-button.component.html
@@ -2,5 +2,5 @@
   class="sso-button"
   (click)="onClick()">
   <pa-icon [path]="icon"></pa-icon>
-  <span [innerHTML]="'login.sign-up-with' | translate: { provider: capitalizedProvider }"></span>
+  {{ 'login.sign-up-with' | translate: { provider: capitalizedProvider } }}
 </button>
