--- a/libs/common/src/lib/user/sso/sso-button.component.scss
+++ b/libs/common/src/lib/user/sso/sso-button.component.scss
@@ -10,9 +10,10 @@
   border: none;
   display: flex;
   flex: 1 0 auto;
+  font-weight: $font-weight-semi-bold;
   gap: rhythm(1);
-  justify-content: center;
   height: rhythm(5);
+  justify-content: center;
   margin: 0;
   padding: 0;
   transition: background $transition-hint;
