--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -30,6 +30,7 @@ $rhythm: (
   40: ($spacer * 40),     //  40   unit - 320px - 20     rem
   41: ($spacer * 41),     //  41   unit - 328px - 20.5   rem
   48: ($spacer * 48),     //  48   unit - 384px - 24     rem
+  50: ($spacer * 50),     //  50   unit - 400px - 25     rem
   56: ($spacer * 56),     //  56   unit - 448px - 28     rem
   64: ($spacer * 64),     //  64   unit - 512px - 32     rem
 );
