--- a/libs/sistema/theme/tokens/_typography.tokens.scss
+++ b/libs/sistema/theme/tokens/_typography.tokens.scss
@@ -16,7 +16,7 @@ $font-weight-regular: 400;
 $font-weight-semi-bold: 600;
 $font-weight-bold: 700;
 
-$font-weight-body-xs: $font-weight-semi-bold;
+$font-weight-body-xs: $font-weight-regular;
 $font-weight-body-s: $font-weight-regular;
 $font-weight-body-m: $font-weight-regular;
 $font-weight-title-xxs: $font-weight-semi-bold;
