--- a/libs/common/src/lib/user/signup/signup.component.html
+++ b/libs/common/src/lib/user/signup/signup.component.html
@@ -17,6 +17,11 @@
         {{ 'login.full_name' | translate }}
       </pa-input>
       <pa-input
+        formControlName="company"
+        [errorMessages]="validationMessages.company">
+        {{ 'login.company' | translate }}
+      </pa-input>
+      <pa-input
         type="email"
         placeholder="email@company.com"
         formControlName="email"
