Creating account and kb + redirecting to resource list

--- a/libs/common/src/lib/user/onboarding/onboarding.component.scss
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.scss
@@ -42,4 +42,12 @@
       color: inherit;
     }
   }
+
+  .setting-up {
+    min-height: rhythm(24);
+
+    header {
+      margin-bottom: rhythm(5);
+    }
+  }
 }
