--- a/libs/common/src/lib/user/check-mail/check-mail.component.html
+++ b/libs/common/src/lib/user/check-mail/check-mail.component.html
@@ -4,7 +4,7 @@
       src="assets/signup/check-email.png"
       [alt]="'login.check_email' | translate" />
 
-    <h1>{{ 'login.check_email' | translate }}</h1>
+    <h1 qa="confirmation-title">{{ 'login.check_email' | translate }}</h1>
     <p
       class="body-m"
       [innerHTML]="'login.check_email_details' | translate: { email: email }"></p>
