--- a/libs/common/src/lib/user/recover/recover.component.scss
+++ b/libs/common/src/lib/user/recover/recover.component.scss
@@ -1,22 +1,12 @@
-.recover_title {
-  margin: 50px 0 42px 0;
-  padding: 0 30px;
-  text-align: center;
-  h1 {
-    margin: 0 0 8px 0;
-    font-size: var(--stf-font-size-title);
-    font-weight: var(--stf-font-weight-bold);
-  }
-  .description {
-    line-height: 1.5;
-  }
-}
+@import 'variables';
+@import '../user-layout';
 
-.recover_form {
-  margin-bottom: 44px;
-  padding: 0 20px;
-}
+.main-container {
+  gap: rhythm(4);
 
-.recover_button {
-  margin-top: 60px;
+  .recover-form {
+    display: flex;
+    flex-direction: column;
+    gap: rhythm(3);
+  }
 }
