--- a/libs/common/src/lib/user/user-container/user-container.component.html
+++ b/libs/common/src/lib/user/user-container/user-container.component.html
@@ -5,7 +5,7 @@
       alt="Nuclia Beta" />
   </div>
   <div
-    class="main-container"
+    class="user-container"
     [class.left-aligned]="alignLeft">
     <ng-content></ng-content>
   </div>
