--- a/libs/common/src/lib/user/user-container/user-container.component.scss
+++ b/libs/common/src/lib/user/user-container/user-container.component.scss
@@ -14,7 +14,7 @@
     }
   }
 
-  .main-container {
+  .user-container {
     align-items: center;
     background: $color-light-stronger;
     display: flex;
