--- a/libs/common/src/lib/user/onboarding/onboarding.component.html
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.html
@@ -60,6 +60,7 @@
       <div class="setting-up">
         <header>
           <h1>{{ 'onboarding.setting_up' | translate }}</h1>
+          <p>{{ 'onboarding.setting_up_subtitle' | translate }}</p>
         </header>
         <p class="body-m">
           {{ 'onboarding.account_creation' | translate }}
