--- a/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
+++ b/apps/dashboard/src/app/upload/upload-text/upload-text.component.html
@@ -20,7 +20,7 @@
       <li>Use commas as field delimiter</li>
       <li>Fields containing commas or line breaks must be enclosed in double quotes</li>
       <li>Double quotes appearing inside a quoted field must be prefixed with an additional double quote</li>
-      <li>No header line is required</li>
+      <li>Don't include a header line</li>
     </ul>
   </ncom-hint>
 
