--- a/libs/common/src/lib/user/reset/reset.component.html
+++ b/libs/common/src/lib/user/reset/reset.component.html
@@ -1,59 +1,39 @@
-<stf-user-container widthSm="520px">
-  <stf-user-container-logo>
-    <div class="reset_title">
-      <h1>{{ 'reset.title' | translate }}</h1>
-      <div class="description">{{ 'reset.description' | translate }}</div>
-    </div>
-    <div class="reset_form">
-      <form
-        [formGroup]="resetForm"
-        #form="ngForm"
-        (ngSubmit)="submit()">
-        <div class="reset_field">
-          <stf-input
-            #password
-            formControlName="password"
-            (enterPressed)="onEnterPressed('password')"
-            required
-            type="password"
-            theme="border"
-            [noAutocapitalize]="true"
-            [validator]="resetForm.controls['password']"
-            [validation_messages]="resetValidationMessages.password">
-            {{ 'reset.password' | translate }}
-          </stf-input>
-        </div>
-        <div class="reset_field">
-          <stf-input
-            #passwordConfirm
-            formControlName="passwordConfirm"
-            [noAutocapitalize]="true"
-            (enterPressed)="onEnterPressed('passwordConfirm')"
-            required
-            type="password"
-            theme="border"
-            [validator]="resetForm.controls['passwordConfirm']"
-            [validation_messages]="resetValidationMessages.passwordConfirm">
-            {{ 'generic.confirm_password' | translate }}
-          </stf-input>
-        </div>
-        <div
-          class="reset_success"
-          *ngIf="passwordRecovered">
-          {{ 'reset.password_reset' | translate }}
-        </div>
-        <div
-          class="reset_button"
-          fxLayout="row"
-          fxLayoutAlign="center center">
-          <pa-button
-            type="submit"
-            kind="primary"
-            [disabled]="passwordRecovered">
-            {{ 'generic.save' | translate }}
-          </pa-button>
-        </div>
-      </form>
-    </div>
-  </stf-user-container-logo>
+<stf-user-container>
+  <div class="main-container with-gap">
+    <h1>{{ 'reset.title' | translate }}</h1>
+    <form
+      class="reset-form"
+      [formGroup]="resetForm"
+      (ngSubmit)="submit()">
+      <div class="reset_field">
+        <nsi-password-input
+          formControlName="password"
+          required
+          type="password"
+          autocapitalize="off"
+          [disabled]="resetting"
+          [errorMessages]="resetValidationMessages.password">
+          {{ 'reset.password' | translate }}
+        </nsi-password-input>
+      </div>
+      <div class="reset_field">
+        <nsi-password-input
+          formControlName="passwordConfirm"
+          autocapitalize="off"
+          required
+          type="password"
+          [disabled]="resetting"
+          [errorMessages]="resetValidationMessages.passwordConfirm">
+          {{ 'generic.confirm_password' | translate }}
+        </nsi-password-input>
+      </div>
+      <pa-button
+        class="full-width"
+        type="submit"
+        kind="primary"
+        [disabled]="resetting">
+        {{ 'generic.save' | translate }}
+      </pa-button>
+    </form>
+  </div>
 </stf-user-container>
