--- a/libs/common/src/lib/user/signup/signup.component.scss
+++ b/libs/common/src/lib/user/signup/signup.component.scss
@@ -1,28 +1,24 @@
 @import 'variables';
+@import '../user-layout';
 
-.signup_description {
-  text-align: center;
-  margin-bottom: rhythm(5);
-}
-
-.signup_field {
-  margin-bottom: rhythm(2);
-}
-
-.signup_policy {
-  display: flex;
-  flex-direction: column;
-  gap: rhythm(1);
-  margin: rhythm(2) 0 rhythm(5) 0;
+.main-container {
+  gap: rhythm(4);
 
   a {
-    color: inherit;
-    font-weight: var(--stf-font-weight-semibold);
+    text-decoration: none;
   }
-}
 
-.signup_error {
-  margin: rhythm(3) 0;
-  text-align: center;
-  color: $color-secondary-strong;
+  .form-header p {
+    margin-bottom: 0;
+  }
+
+  .sso-container {
+    display: flex;
+    flex-direction: column;
+    gap: rhythm(1);
+  }
+
+  .existing-account {
+    text-align: center;
+  }
 }
