--- a/libs/common/src/lib/user/user-container/user-container.component.html
+++ b/libs/common/src/lib/user/user-container/user-container.component.html
@@ -1,19 +1,12 @@
-<div
-  class="user-background"
-  fxLayout="column">
+<div class="user-background">
+  <div class="logo">
+    <img
+      src="assets/logos/logo-beta.svg"
+      alt="Nuclia Beta" />
+  </div>
   <div
     class="user-container"
-    [ngStyle]="{ width: widthSm }">
+    [class.left-aligned]="alignLeft">
     <ng-content></ng-content>
   </div>
-  <ng-container *ngIf="showLink">
-    <a
-      class="go-web"
-      href="https://flaps.io"
-      fxLayout="row"
-      fxLayoutAlign="center center"
-      [ngStyle.gt-xs]="{ width: widthSm }">
-      {{ 'login.gogetflaps' | translate }}
-    </a>
-  </ng-container>
 </div>
