--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -40,22 +40,22 @@
       <pa-dropdown #uploadMenu>
         <pa-option
           icon="file"
-          (selectOption)="uploadFiles()">
+          (selectOption)="upload('files')">
           {{ 'upload.files' | translate }}
         </pa-option>
         <pa-option
           icon="folder"
-          (selectOption)="uploadFiles(true)">
+          (selectOption)="upload('folder')">
           {{ 'upload.folder' | translate }}
         </pa-option>
         <pa-option
           icon="link"
-          (selectOption)="uploadLink()">
+          (selectOption)="upload('link')">
           {{ 'upload.link' | translate }}
         </pa-option>
         <pa-option
           icon="file"
-          (selectOption)="uploadText()">
+          (selectOption)="upload('csv')">
           {{ 'upload.upload_from_csv' | translate }}
         </pa-option>
       </pa-dropdown>
