Add delete dataset button on resource list page
  - display "delete dataset" button only when there are some sample resources in the kb
  - delete sample resources when clicking on the button
  - display toast message depending on success/error (success, partial success, error)
  - cleanup sample dataset on success

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -59,6 +59,14 @@
           {{ 'upload.upload_from_csv' | translate }}
         </pa-option>
       </pa-dropdown>
+
+      <pa-button
+        *ngIf="hasSampleData | async"
+        kind="destructive"
+        aspect="basic"
+        (click)="deleteSampleDataset()">
+        {{ 'onboarding.dataset.delete' | translate }}
+      </pa-button>
     </div>
     <div class="status-buttons-container">
       <div
