--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -8,6 +8,7 @@
 
   <div class="resource-list-header">
     <form
+      *ngIf="isMainView; else backButton"
       class="search-bar-container"
       [formGroup]="searchForm"
       (ngSubmit)="search()">
@@ -28,45 +29,58 @@
         icon="search"
         formControlName="query"></pa-input>
     </form>
-    <div class="upload-container">
+    <ng-template #backButton>
       <pa-button
-        icon="circle-plus"
         iconAndText
+        icon="chevron-left"
         aspect="basic"
-        [paPopup]="uploadMenu"
-        alignPopupOnLeft>
-        {{ 'generic.upload' | translate }}
+        size="small"
+        (click)="displayStatus('PROCESSED')">
+        {{ 'resource.processed_resources' | translate }}
       </pa-button>
-      <pa-dropdown #uploadMenu>
-        <pa-option
-          icon="file"
-          (selectOption)="upload('files')">
-          {{ 'upload.files' | translate }}
-        </pa-option>
-        <pa-option
-          icon="folder"
-          (selectOption)="upload('folder')">
-          {{ 'upload.folder' | translate }}
-        </pa-option>
-        <pa-option
-          icon="link"
-          (selectOption)="upload('link')">
-          {{ 'upload.link' | translate }}
-        </pa-option>
-        <pa-option
-          icon="file"
-          (selectOption)="upload('csv')">
-          {{ 'upload.upload_from_csv' | translate }}
-        </pa-option>
-      </pa-dropdown>
+    </ng-template>
 
-      <pa-button
-        *ngIf="hasSampleData | async"
-        kind="destructive"
-        aspect="basic"
-        (click)="deleteSampleDataset()">
-        {{ 'onboarding.dataset.delete' | translate }}
-      </pa-button>
+    <div class="upload-container">
+      <ng-container *ngIf="isMainView">
+        <pa-button
+          icon="circle-plus"
+          iconAndText
+          aspect="basic"
+          [paPopup]="uploadMenu"
+          alignPopupOnLeft>
+          {{ 'generic.upload' | translate }}
+        </pa-button>
+        <pa-dropdown #uploadMenu>
+          <pa-option
+            icon="file"
+            (selectOption)="upload('files')">
+            {{ 'upload.files' | translate }}
+          </pa-option>
+          <pa-option
+            icon="folder"
+            (selectOption)="upload('folder')">
+            {{ 'upload.folder' | translate }}
+          </pa-option>
+          <pa-option
+            icon="link"
+            (selectOption)="upload('link')">
+            {{ 'upload.link' | translate }}
+          </pa-option>
+          <pa-option
+            icon="file"
+            (selectOption)="upload('csv')">
+            {{ 'upload.upload_from_csv' | translate }}
+          </pa-option>
+        </pa-dropdown>
+
+        <pa-button
+          *ngIf="hasSampleData | async"
+          kind="destructive"
+          aspect="basic"
+          (click)="deleteSampleDataset()">
+          {{ 'onboarding.dataset.delete' | translate }}
+        </pa-button>
+      </ng-container>
     </div>
     <div class="status-buttons-container">
       <div
@@ -76,7 +90,9 @@
           icon="clock-dash"
           size="small"
           kind="destructive"
-          aspect="basic">
+          aspect="basic"
+          [active]="statusDisplayed.value === 'PENDING'"
+          (click)="displayStatus('PENDING')">
           {{ 'resource.status-help.pending' | translate }}
         </pa-button>
         <div class="file-count">{{ pendingCount }}</div>
@@ -89,7 +105,9 @@
           icon="circle-cross"
           size="small"
           kind="destructive"
-          aspect="basic">
+          aspect="basic"
+          [active]="statusDisplayed.value === 'ERROR'"
+          (click)="displayStatus('ERROR')">
           {{ 'resource.status-help.failed' | translate }}
         </pa-button>
         <div class="file-count">{{ failedCount }}</div>
@@ -244,23 +262,6 @@
           </td>
         </ng-container>
 
-        <ng-container cdkColumnDef="status">
-          <th
-            cdk-header-cell
-            *cdkHeaderCellDef>
-            {{ 'resource.status' | translate }}
-          </th>
-          <td
-            cdk-cell
-            *cdkCellDef="let row"
-            (mouseenter)="getProcessingStatus(row.resource)"
-            [paTooltip]="statusTooltips[row.resource.id]"
-            paTooltipType="system"
-            [paTooltipOffset]="-16">
-            <nsi-status [status]="row.resource.metadata.status"></nsi-status>
-          </td>
-        </ng-container>
-
         <ng-container cdkColumnDef="language">
           <th
             cdk-header-cell
@@ -274,7 +275,9 @@
           </td>
         </ng-container>
 
-        <ng-container cdkColumnDef="actions">
+        <ng-container
+          cdkColumnDef="actions"
+          *ngIf="showActions">
           <th
             cdk-header-cell
             *cdkHeaderCellDef>
@@ -296,6 +299,7 @@
               class="resource-actions">
               <button
                 mat-menu-item
+                *ngIf="isMainView"
                 (click)="edit(row.resource.id)"
                 [disabled]="!(isAdminOrContrib | async)">
                 {{ 'generic.edit' | translate }}
@@ -314,6 +318,7 @@
               </button>
               <button
                 mat-menu-item
+                *ngIf="isMainView"
                 (click)="downloadAlgoliaJson(row.resource)">
                 {{ 'generic.download_algolia_json' | translate }}
               </button>
