--- a/apps/dashboard/src/app/resources/resource-list.component.scss
+++ b/apps/dashboard/src/app/resources/resource-list.component.scss
@@ -13,6 +13,7 @@ $table-breakpoint: 1400px;
   background-color: $color-light-stronger;
   border-bottom: 1px solid $color-neutral-lighter;
   display: flex;
+  height: rhythm(6);
   justify-content: space-between;
   margin-bottom: rhythm(4);
   padding-bottom: rhythm(1);
