Display popover on the pending/failing resources buttons
  - display popover automatically for 5 sec if popover was never shown before
  - update the pending/error counts every 30sec

--- a/libs/sistema/theme/_pastanaga-component-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-component-overrides.scss
@@ -13,6 +13,7 @@ overrides for
 @import 'tokens/buttons.tokens';
 @import 'tokens/chips.tokens';
 @import 'tokens/menu.tokens';
+@import 'tokens/popover.tokens';
 @import 'tokens/side-nav.tokens';
 @import 'tokens/table.tokens';
 @import 'tokens/tabs.tokens';
