Don't navigate to resource list if canceling upload

--- a/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
+++ b/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
@@ -3,7 +3,7 @@
     class="close-button"
     icon="cross"
     aspect="basic"
-    (click)="close.emit()">
+    (click)="cancel()">
     {{ 'generic.close' | translate }}
   </pa-button>
 
@@ -175,7 +175,7 @@
     fxLayoutGap="16px">
     <pa-button
       aspect="basic"
-      (click)="close.emit()">
+      (click)="cancel()">
       {{ 'generic.cancel' | translate }}
     </pa-button>
 
